--- a/AndroidsDemo/AndroidManifest.xml
+++ b/AndroidsDemo/AndroidManifest.xml
@@ -22,8 +22,16 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.example.androidsdemo.RatioImageViewDemo"
+            android:name="com.example.androidsdemo.ShapeImageViewDemo"
             android:label="@string/app_name" >
+        </activity>
+        <activity
+                android:name="com.example.androidsdemo.MaskImageViewDemo"
+                android:label="@string/app_name" >
+        </activity>
+        <activity
+                android:name="com.example.androidsdemo.RatioImageViewDemo"
+                android:label="@string/app_name" >
         </activity>
     </application>
 
