--- a/AndroidsDemo/AndroidManifest.xml
+++ b/AndroidsDemo/AndroidManifest.xml
@@ -33,6 +33,11 @@
                 android:name="com.example.androidsdemo.RatioImageViewDemo"
                 android:label="@string/app_name" >
         </activity>
+        <activity
+            android:name="com.example.androidsdemo.ScrollPickerViewDemo"
+            android:label="@string/app_name" >
+    </activity>
+
     </application>
 
 </manifest>
