--- a/AndroidsDemo/AndroidManifest.xml
+++ b/AndroidsDemo/AndroidManifest.xml
@@ -1,42 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.androidsdemo"
-    android:versionCode="1"
-    android:versionName="1.0" >
+          package="com.example.androidsdemo"
+          android:versionCode="1"
+          android:versionName="1.0">
 
     <uses-sdk
-        android:minSdkVersion="9"
-        android:targetSdkVersion="21" />
+            android:minSdkVersion="11"
+            android:targetSdkVersion="21"/>
 
     <application
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+            android:allowBackup="true"
+            android:icon="@drawable/ic_launcher"
+            android:label="@string/app_name">
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
+                android:name=".MainActivity"
+                android:label="@string/app_name">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity
-            android:name="com.example.androidsdemo.ShapeImageViewDemo"
-            android:label="@string/app_name" >
+                android:name="com.example.androidsdemo.ShapeImageViewDemo"
+                android:label="@string/app_name">
         </activity>
         <activity
                 android:name="com.example.androidsdemo.MaskImageViewDemo"
-                android:label="@string/app_name" >
+                android:label="@string/app_name">
         </activity>
         <activity
                 android:name="com.example.androidsdemo.RatioImageViewDemo"
-                android:label="@string/app_name" >
+                android:label="@string/app_name">
         </activity>
         <activity
-            android:name="com.example.androidsdemo.ScrollPickerViewDemo"
-            android:label="@string/app_name" >
-    </activity>
+                android:name="com.example.androidsdemo.ScrollPickerViewDemo"
+                android:label="@string/app_name">
+        </activity>
+        <activity
+                android:name="com.example.androidsdemo.AnimatorUtilDemo"
+                android:label="@string/app_name">
+        </activity>
 
     </application>
 
