--- a/AndroidsDemo/AndroidManifest.xml
+++ b/AndroidsDemo/AndroidManifest.xml
@@ -38,8 +38,11 @@
             android:label="@string/app_name"></activity>
         <activity
             android:name=".KeyboardLayoutDemo"
-            android:windowSoftInputMode="adjustResize"
-            android:label="@string/app_name"/>
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name=".OtherDemo"
+            android:label="@string/app_name" />
     </application>
 
 </manifest>
