--- a/AndroidsDemo/AndroidManifest.xml
+++ b/AndroidsDemo/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.androidsdemo"
-    android:versionCode="1"
-    android:versionName="1.0">
+          package="com.example.androidsdemo"
+          android:versionCode="1"
+          android:versionName="1.0">
 
     <uses-sdk
         android:minSdkVersion="11"
-        android:targetSdkVersion="21" />
+        android:targetSdkVersion="21"/>
 
     <application
         android:allowBackup="true"
@@ -16,9 +16,9 @@
             android:name=".MainActivity"
             android:label="@string/app_name">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity
@@ -39,10 +39,14 @@
         <activity
             android:name=".KeyboardLayoutDemo"
             android:label="@string/app_name"
-            android:windowSoftInputMode="adjustResize" />
+            android:windowSoftInputMode="adjustResize"/>
+        <activity
+            android:name=".DragListViewDemo"
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustResize"/>
         <activity
             android:name=".OtherDemo"
-            android:label="@string/app_name" />
+            android:label="@string/app_name"/>
     </application>
 
 </manifest>
