修改了原有BaseActivity的逻辑，新增InjectionLayoutInflater，用于渲染的view进行装饰

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,36 @@
-.idea
-*.iml
-*.class
+# Gradle
+.gradle
+gradlew.bat
+build
+local.properties
+reports
+
+# Maven
+target
+pom.xml.*
+release.properties
+gen-external-apklibs
+
+# Eclipse
 .classpath
 .project
-.setting
-bin
+.settings
+eclipsebin
+
+# IntelliJ IDEA
+.idea
+*.iml
+*.ipl
+*.iws
+classes/
+idea-classes/
+coverage-error.log
+
+# Android
 gen
+bin
+project.properties
 out
 
-
+# Finder
+.DS_Store
