--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Aug 23 11:01:17 CST 2016
+#Wed Nov 09 18:35:56 CST 2016
+ndk.dir=/home/huangziwei/android-sdk-linux/ndk-bundle
 sdk.dir=/home/huangziwei/android-sdk-linux
