--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Feb 02 01:10:49 CST 2017
-sdk.dir=/Users/huangziwei/Library/Android/sdk
+#Fri Feb 03 14:15:19 CST 2017
+ndk.dir=/home/huangziwei/android-sdk-linux/ndk-bundle
+sdk.dir=/home/huangziwei/android-sdk-linux
+
+for.upload=true
