--- a/AndroidsDemo/build.gradle
+++ b/AndroidsDemo/build.gradle
@@ -38,5 +38,5 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile project(':AndroidsLib')
+    compile project(':androids')
 }
