--- a/androids/build.gradle
+++ b/androids/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        minSdkVersion 11
+        minSdkVersion 14
         targetSdkVersion 19
         versionCode 1
         versionName "1.0"
@@ -34,8 +34,7 @@ android {
 }
 
 dependencies {
-    //    compile fileTree(include: ['*.jar'], dir: 'libs')
-    provided files('libs/android-support-v4.jar')
+    compile fileTree(include: ['*.jar'], dir: 'libs')
 }
 if (isForUpload2Maven()) {
     apply from: "https://raw.githubusercontent.com/1993hzw/common/master/bintrayUpload.gradle"
