--- a/AndroidsDemo/build.gradle
+++ b/AndroidsDemo/build.gradle
@@ -39,4 +39,5 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile project(':androids')
+    compile 'com.android.support:recyclerview-v7:23.2.0'
 }
