--- a/androids/build.gradle
+++ b/androids/build.gradle
@@ -7,8 +7,8 @@ android {
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion 19
-        versionCode 13
-        versionName "1.1.8.1"
+        versionCode 14
+        versionName "1.2"
     }
     buildTypes {
         release {
@@ -35,6 +35,7 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+    provided 'com.android.support:recyclerview-v7:23.2.0'
 }
 if (isForUpload2Maven()) {
     apply from: "https://raw.githubusercontent.com/1993hzw/common/master/bintrayUpload.gradle"
