优化TouchGestureDetector，完善手势识别，适应更多场景

--- a/AndroidsDemo/AndroidManifest.xml
+++ b/AndroidsDemo/AndroidManifest.xml
@@ -47,6 +47,7 @@
             android:name=".OtherDemo"
             android:label="@string/app_name"/>
         <activity android:name=".EasyAdapterDemo"/>
+        <activity android:name=".TouchGestureDetectorDemo"/>
     </application>
 
 </manifest>
