--- a/AndroidsDemo/AndroidManifest.xml
+++ b/AndroidsDemo/AndroidManifest.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example.androidsdemo"
-    >
+    package="com.example.androidsdemo">
 
     <uses-sdk
         android:minSdkVersion="11"
-        android:targetSdkVersion="21"/>
+        android:targetSdkVersion="21" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name">
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
@@ -38,16 +38,13 @@
         <activity
             android:name=".KeyboardLayoutDemo"
             android:label="@string/app_name"
-            android:windowSoftInputMode="adjustResize"/>
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".DragListViewDemo"
             android:label="@string/app_name"
-            android:windowSoftInputMode="adjustResize"/>
-        <activity
-            android:name=".OtherDemo"
-            android:label="@string/app_name"/>
-        <activity android:name=".EasyAdapterDemo"/>
-        <activity android:name=".TouchGestureDetectorDemo"/>
+            android:windowSoftInputMode="adjustResize" />
+        <activity android:name=".EasyAdapterDemo" />
+        <activity android:name=".TouchGestureDetectorDemo" />
     </application>
 
 </manifest>
