--- a/AndroidsDemo/AndroidManifest.xml
+++ b/AndroidsDemo/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
@@ -48,6 +48,7 @@
         <activity
             android:name=".EllipsizeUtilsDemo"
             android:windowSoftInputMode="adjustResize" />
+        <activity android:name=".OverscrollDemo" />
     </application>
 
 </manifest>
