--- a/androids/build.gradle
+++ b/androids/build.gradle
@@ -36,4 +36,5 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     provided 'com.android.support:recyclerview-v7:26.1.0'
+    provided 'com.android.support:design:26.1.0'
 }
