--- a/AndroidsDemo/AndroidManifest.xml
+++ b/AndroidsDemo/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.AppCompat">
+        android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
@@ -48,7 +48,6 @@
         <activity
             android:name=".EllipsizeUtilsDemo"
             android:windowSoftInputMode="adjustResize" />
-        <activity android:name=".OverscrollDemo" />
     </application>
 
 </manifest>
